name:            chiso-tex
version:         0.0
synopsis:        A program using the curry-howard isomorphism to generate typeset latex derivations from a proof term.
license-file:    LICENSE
author:          Robert Marsh <rdmarsh2@gmail.com>
build-type:      Simple
cabal-version:   >= 1.2

executable program1
  main-is:         Main.hs
  hs-source-dirs:  src
  other-modules:   
  build-depends: base, containers, mtl, transformers, parsec, bytestring

